# kColorPicker

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
.github/workflows/: build.yml  cmake.yml
cmake/: kColorPicker-Qt5Config.cmake.in  kColorPicker-Qt6Config.cmake.in  kColorPicker-config.cmake.in  kColorPickerConfig.cmake.in
example/: CMakeLists.txt  main.cpp
icons/: resources.qrc
include/kColorPicker/: KColorPicker.h  KColorPickerExport.h
src/: CMakeLists.txt  IconCreator.cpp  IconCreator.h  KColorPicker.cpp  PopupMenu.cpp  PopupMenu.h
src/buttons/: AbstractPopupMenuButton.cpp  AbstractPopupMenuButton.h  ColorButton.cpp  ColorButton.h  ColorDialogButton.cpp  ColorDialogButton.h
src/common/: ScaledSizeProvider.cpp  ScaledSizeProvider.h
tests/: CMakeLists.txt
tests/buttons/: ColorButtonTest.cpp  ColorButtonTest.h
